// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExternalServiceForm create GitHub 1`] = `
<DocumentFragment>
  <form
    class="external-service-form"
  >
    <div
      class="form-group"
    >
      <label
        class="label label mb-0"
      >
        <div
          class="mb-2"
        >
          Display name:
        </div>
        <div
          class="container loader-input loaderInput"
        >
          <input
            autocomplete="off"
            autocorrect="off"
            class="form-control with-invalid-icon"
            id="test-external-service-form-display-name"
            required=""
            spellcheck="false"
            type="text"
            value="GitHub"
          />
        </div>
      </label>
    </div>
    <div
      class="form-group"
    >
      DynamicallyImportedMonacoSettingsEditor
    </div>
    <button
      aria-disabled="false"
      class="btn btnPrimary test-add-external-service-button"
      type="submit"
    >
      Add connection
    </button>
  </form>
</DocumentFragment>
`;

exports[`ExternalServiceForm edit GitHub 1`] = `
<DocumentFragment>
  <form
    class="external-service-form"
  >
    <div
      class="form-group"
    >
      <label
        class="label label mb-0"
      >
        <div
          class="mb-2"
        >
          Display name:
        </div>
        <div
          class="container loader-input loaderInput"
        >
          <input
            autocomplete="off"
            autocorrect="off"
            class="form-control with-invalid-icon"
            id="test-external-service-form-display-name"
            required=""
            spellcheck="false"
            type="text"
            value="GitHub"
          />
        </div>
      </label>
    </div>
    <div
      class="form-group"
    >
      DynamicallyImportedMonacoSettingsEditor
    </div>
    <button
      aria-disabled="false"
      class="btn btnPrimary test-add-external-service-button"
      type="submit"
    >
      Add connection
    </button>
  </form>
</DocumentFragment>
`;

exports[`ExternalServiceForm edit GitHub, loading 1`] = `
<DocumentFragment>
  <form
    class="external-service-form"
  >
    <div
      class="form-group"
    >
      <label
        class="label label mb-0"
      >
        <div
          class="mb-2"
        >
          Display name:
        </div>
        <div
          class="container loader-input loaderInput"
        >
          <input
            autocomplete="off"
            autocorrect="off"
            class="form-control with-invalid-icon"
            disabled=""
            id="test-external-service-form-display-name"
            required=""
            spellcheck="false"
            type="text"
            value="GitHub"
          />
        </div>
      </label>
    </div>
    <div
      class="form-group"
    >
      DynamicallyImportedMonacoSettingsEditor
    </div>
    <button
      aria-disabled="true"
      class="btn btnPrimary test-add-external-service-button"
      type="submit"
    >
      <div
        aria-label="Loading"
        aria-live="polite"
        class="mdi-icon iconInline loadingSpinner"
        data-loading-spinner="true"
        role="img"
      />
      Add connection
    </button>
  </form>
</DocumentFragment>
`;
